# v-mate-reborn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml  requirements.txt
backend/: Cargo.toml  app.py  config.py  sockets.py
backend/api/: auth.py  characters.py  misc.py
backend/auth/: manager.py  oauth.py
backend/core/: ai.py  emotion.py  memory.py  text_splitter.py
backend/migrations/: 0001_init.sql
backend/models/: user.py
backend/services/: stt.py  tts.py
backend/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend/src/api/: auth.rs  characters.rs  misc.rs  mod.rs
backend/src/auth/: jwt.rs  mod.rs  oauth.rs  password.rs
backend/src/core/: ai.rs  emotion.rs  memory.rs  mod.rs  text_splitter.rs
backend/src/models/: character.rs  mod.rs  user.rs
backend/src/services/: stt.rs  tts.rs
backend/src/ws/: handler.rs  mod.rs  protocol.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/auth/: login.html
frontend/public/animations/: idle_01.vrma  idle_02.vrma  idle_03.vrma
frontend/src/: App.tsx  config.js  config.ts  main.js  main.tsx
frontend/src/api/: auth.js  http.js  http.ts
frontend/src/audio/: lipsync.js  player.js
frontend/src/character/: animation.js  expression.js  loader.js
frontend/src/components/: MainView.tsx  main-view.css
frontend/src/hooks/: useAnimationController.ts  useAudioPlayer.ts  useExpression.ts  useLipSync.ts  useVRM.ts
frontend/styles/: auth.css  bubble.css  main.css  panel.css  sidebar.css
(+32 files in other folders)
